--- a/templates/edit_problem.html
+++ b/templates/edit_problem.html
@@ -871,7 +871,7 @@
           },
           {
             name: "Equipamentos de Solda e Corte",
-            img: "equipamentos_solda_e_corte_icon.png",
+            img: "equipamentos_solda_e_corte_icon.webp",
             brands: []
           }
         ]
