--- a/templates/solucao.html
+++ b/templates/solucao.html
@@ -725,7 +725,7 @@
                 />
               {% else %}
                 <img
-                  src="{{ url_for('static', filename='images/avatar_placeholder.png') }}"
+                  src="{{ url_for('static', filename='images/avatar_icon.webp') }}"
                   alt="Foto de perfil padrão"
                   class="profile-pic"
                 />
@@ -742,7 +742,7 @@
               <p><strong>Enviado por:</strong> {{ creator_name }}</p>
             {% else %}
               <img
-                src="{{ url_for('static', filename='images/avatar_placeholder.png') }}"
+                src="{{ url_for('static', filename='images/avatar_icon.webp') }}"
                 alt="Foto de perfil padrão"
                 class="profile-pic"
               />
@@ -853,7 +853,7 @@
                 />
               {% else %}
                 <img
-                  src="{{ url_for('static', filename='images/avatar_placeholder.png') }}"
+                  src="{{ url_for('static', filename='images/avatar_icon.webp') }}"
                   alt="Foto de perfil padrão"
                   class="profile-pic"
                 />
@@ -870,7 +870,7 @@
               <p><strong>Resolvido por:</strong> {{ solver_name }}</p>
             {% else %}
               <img
-                src="{{ url_for('static', filename='images/avatar_placeholder.png') }}"
+                src="{{ url_for('static', filename='images/avatar_icon.webp') }}"
                 alt="Foto de perfil padrão"
                 class="profile-pic"
               />
@@ -1004,7 +1004,7 @@
         title="Página Inicial"
       >
         <img
-          src="{{ url_for('static', filename='images/home_icon.png') }}"
+          src="{{ url_for('static', filename='images/home_icon.webp') }}"
           alt="Home Icon"
           style="width:30px;height:30px;margin-bottom:0px;"
         />
@@ -1018,7 +1018,7 @@
         title="Resolver Problemas"
       >
         <img
-          src="{{ url_for('static', filename='images/resolver_icon.png') }}"
+          src="{{ url_for('static', filename='images/resolver_icon.webp') }}"
           alt="Resolver Icon"
           style="width:30px;height:30px;margin-bottom:0px;"
         />
@@ -1032,7 +1032,7 @@
         title="Envie seu Problema"
       >
         <img
-          src="{{ url_for('static', filename='images/icone_mais.png') }}"
+          src="{{ url_for('static', filename='images/enviar_icon.webp') }}"
           alt="Envie"
           style="width:30px; height:30px;"
         />
@@ -1047,7 +1047,7 @@
           title="Entrar"
         >
           <img
-            src="{{ url_for('static', filename='images/perfil_icon.png') }}"
+            src="{{ url_for('static', filename='images/perfil_icon.webp') }}"
             alt="Perfil Icon"
             style="width:30px;height:30px;margin-bottom:0px;"
           />
@@ -1060,7 +1060,7 @@
           title="Perfil"
         >
           <img
-            src="{{ url_for('static', filename='images/perfil_icon.png') }}"
+            src="{{ url_for('static', filename='images/perfil_icon.webp') }}"
             alt="Perfil Icon"
             style="width:30px;height:30px;margin-bottom:0px;"
           />
