--- a/templates/resolver.html
+++ b/templates/resolver.html
@@ -657,7 +657,7 @@
         title="Página Inicial"
       >
         <img
-          src="{{ url_for('static', filename='images/home_icon.png') }}"
+          src="{{ url_for('static', filename='images/home_icon.webp') }}"
           alt="Home Icon"
           style="width:30px;height:30px;margin-bottom:0px;"
         />
@@ -671,7 +671,7 @@
         title="Resolver Problemas"
       >
         <img
-          src="{{ url_for('static', filename='images/resolver_icon.png') }}"
+          src="{{ url_for('static', filename='images/resolver_icon.webp') }}"
           alt="Resolver Icon"
           style="width:30px;height:30px;margin-bottom:0px;"
         />
@@ -685,7 +685,7 @@
         title="Envie seu Problema"
       >
         <img
-          src="{{ url_for('static', filename='images/icone_mais.png') }}"
+          src="{{ url_for('static', filename='images/enviar_icon.webp') }}"
           alt="Envie"
           style="width:30px; height:30px;"
         />
@@ -700,7 +700,7 @@
           title="Entrar"
         >
           <img
-            src="{{ url_for('static', filename='images/perfil_icon.png') }}"
+            src="{{ url_for('static', filename='images/perfil_icon.webp') }}"
             alt="Perfil Icon"
             style="width:30px;height:30px;margin-bottom:0px;"
           />
@@ -713,7 +713,7 @@
           title="Perfil"
         >
           <img
-            src="{{ url_for('static', filename='images/perfil_icon.png') }}"
+            src="{{ url_for('static', filename='images/perfil_icon.webp') }}"
             alt="Perfil Icon"
             style="width:30px;height:30px;margin-bottom:0px;"
           />
