--- a/templates/nao_resolvidos.html
+++ b/templates/nao_resolvidos.html
@@ -475,7 +475,7 @@
                         />
                       {% else %}
                         <img
-                          src="{{ url_for('static', filename='images/avatar_placeholder.png') }}"
+                          src="{{ url_for('static', filename='images/avatar_icon.webp') }}"
                           alt="Foto de perfil padrão"
                           class="profile-pic"
                         />
@@ -491,7 +491,7 @@
                       />
                     {% else %}
                       <img
-                        src="{{ url_for('static', filename='images/avatar_placeholder.png') }}"
+                        src="{{ url_for('static', filename='images/avatar_icon.webp') }}"
                         alt="Foto de perfil padrão"
                         class="profile-pic"
                       />
